[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/font/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/scene/Menus/Options_Menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://MainMenu.gd" type="Script" id=3]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = 400.0
margin_right = 60.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="VBoxContainer"]
margin_right = 120.0
margin_bottom = 21.0
text = "Play"
flat = true

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 25.0
margin_right = 120.0
margin_bottom = 46.0
text = "Options"
flat = true

[node name="Exit" type="Button" parent="VBoxContainer"]
margin_top = 50.0
margin_right = 120.0
margin_bottom = 71.0
text = "Exit"
flat = true

[node name="Options_Menu" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = 286.939
margin_top = 44.3622
margin_right = -507.061
margin_bottom = -322.638
rect_scale = Vector2( 2, 2 )

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
